<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".FragmentIntro.ThirdFragment"
              android:orientation="vertical"
              android:padding="16dp"
              android:background="@drawable/bg1">

    <android.support.v7.widget.CardView
            android:layout_width="400dp"
            android:layout_height="400dp"
            app:cardCornerRadius="60dp"
            app:cardBackgroundColor="@color/cardview_dark_background"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:src="@drawable/jeppcompas"
    />
    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_marginTop="180dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
    />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/deskripsiC"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
    />
        <TextView
                android:id="@+id/slideThreeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textSize="20sp"
                android:textColor="#990909"
                android:fontFamily="sans-serif-black"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_gravity="bottom|start"

        />
        <TextView
                android:id="@+id/slideDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_weight="1"
                android:text="@string/done"
                android:textSize="20sp"
                android:gravity="bottom|end"
                android:textColor="@color/colorPrimaryDark"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
        />
    </android.support.v7.widget.CardView>
</LinearLayout>