<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".FragmentIntro.FirstFragment"
              android:orientation="vertical"
              android:padding="16dp"
              android:background="@drawable/bg1"
>
    <android.support.v7.widget.CardView
            android:layout_width="400dp"
            android:layout_height="400dp"
            app:cardCornerRadius="60dp"
            app:cardBackgroundColor="@color/cardview_dark_background"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            >
        <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginBottom="80dp"
                android:src="@drawable/jeeprenage"
        />
    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:text="@string/title3"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
    />
        <TextView
                android:id="@+id/textView2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/deskripsiR"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:layout_marginTop="90dp"
        />
        <TextView
                android:id="@+id/slideNext"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginLeft="310dp"
                android:text="@string/next"
                android:fontFamily="sans-serif-black"
                android:textSize="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="bottom|end"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
        />
    </android.support.v7.widget.CardView>

</LinearLayout>